--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -1042,7 +1042,7 @@ Per cancellare musica, foto e altri dati dell'utente, è necessario cancellare i
     <string name="activity_not_found">Applicazione non installata sul telefono.</string>
     <string name="manageapplications_settings_title">Gestisci applicazioni</string>
     <string name="manageapplications_settings_summary">Gestisci e rimuovi applicazioni installate</string>
-    <string name="applications_settings">App</string>
+    <string name="applications_settings">Applicazioni</string>
     <string name="applications_settings_summary">Gestisci le applicazioni, imposta le scorciatoie di avvio rapido</string>
     <string name="applications_settings_header">Impostazioni applicazioni</string>
     <string name="install_applications">Origini sconosciute</string>
@@ -2642,7 +2642,7 @@ ed esegui il software."</string>
     <string name="preferred_app_settings_default">Predefinite</string>
     <string name="preferred_app_settings_reset">Ripristino predefinite</string>
     <string name="preferred_app_settings_reset_message">Ripristino impostazioni app predefinite?</string>
-    <string name="system_app_settings">App di sistema</string>
+    <string name="system_app_settings">Applicazioni di sistema</string>
     <string name="connect_to_internet">Rete Wi-Fi</string>
     <string name="wifi_setting_category">Per attivare il tuo dispositivo, connettiti ad Internet</string>
     <string name="downloading_description">Download in corso…</string>
