--- a/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
@@ -118,13 +118,27 @@
     <string name="pref_camera_whitebalance_entry_cloudy">Nuvoloso</string>
     <string name="pref_camera_whitebalance_entry_manual">Manuale</string>
     <string name="pref_camera_whitebalance_entry_measure">Misura</string>
-    <string name="pref_camera_coloreffect_title">Effetti colore</string>
-    <string name="pref_camera_coloreffect_entry_none" />
-    <string name="pref_camera_coloreffect_entry_mono" />
-    <string name="pref_camera_coloreffect_entry_sepia" />
-    <string name="pref_camera_coloreffect_entry_negative" />
-    <string name="pref_camera_coloreffect_entry_posterize" />
-    <string name="pref_camera_coloreffect_entry_aqua" />
+    <string name="pref_camera_coloreffect_title">Filtri</string>
+    <string name="pref_camera_coloreffect_entry_sepia">Seppia</string>
+    <string name="pref_camera_coloreffect_entry_negative">Negativo</string>
+    <string name="pref_camera_coloreffect_entry_posterize">Poster</string>
+    <string name="pref_camera_coloreffect_entry_aqua">Acqua</string>
+    <string name="pref_camera_coloreffect_entry_none">Normale</string>
+    <string name="pref_camera_coloreffect_entry_mono">B/N</string>
+    <string name="pref_camera_coloreffect_entry_vivid">Vivido</string>
+    <string name="pref_camera_coloreffect_entry_yesteryear">Annata</string>
+    <string name="pref_camera_coloreffect_entry_brannan">Alba</string>
+    <string name="pref_camera_coloreffect_entry_sketch">Schizzo</string>
+    <string name="pref_camera_coloreffect_entry_seventy">"Anni'70"</string>
+    <string name="pref_camera_coloreffect_entry_fisheye">Fish Eye</string>
+    <string name="pref_camera_coloreffect_entry_jstyle">Giappone</string>
+    <string name="pref_camera_coloreffect_entry_xproii">XProII</string>
+    <string name="pref_camera_coloreffect_entry_mosaic">Mosaico</string>
+    <string name="pref_camera_coloreffect_entry_earlybird">Autunno</string>
+    <string name="pref_camera_coloreffect_entry_nashvile">Indigo</string>
+    <string name="pref_camera_coloreffect_entry_planet">Riduzione</string>
+    <string name="pref_camera_coloreffect_entry_mirror">Specchio</string>
+    <string name="pref_camera_coloreffect_entry_gaussianblur">Sfocato</string>
     <string name="pref_camera_touchafaec_title">Tocco AF/AEC</string>
     <string name="pref_camera_touchafaec_entry_off">Disattivato</string>
     <string name="pref_camera_touchafaec_entry_on">Attivato</string>
@@ -239,6 +253,8 @@ ed esci dall'inquadratura"</string>
     <string name="pref_camera_autoexposure_entry_centerweighted">Media ponderata al centro</string>
     <string name="pref_camera_autoexposure_entry_spotmetering">Misurazione a punto</string>
     <string name="pref_camera_audio_capture_title">Scatto vocale</string>
+	<string name="pref_audio_indicator_entry_off">Disattivo</string>
+    <string name="pref_audio_indicator_entry_on">Attivo</string>
     <string name="pref_camera_video_duration_title">Durata Video</string>
     <string name="pref_camera_video_duration_entry_mms">30 secondi(MMS)</string>
     <string name="pref_camera_video_duration_entry_10">10 minuti</string>
@@ -477,20 +493,13 @@ ed esci dall'inquadratura"</string>
     <string name="pref_camera_multiple_face_beauty_title">Modalità Bellezza</string>
     <string name="pref_camera_multiple_face_beauty_entry_off">Un viso</string>
     <string name="pref_camera_multiple_face_beauty_entry_on">Due visi</string>
+	<string name="pref_face_beauty_title">Reg.viso</string>
     <string name="measure_whitebalance_button">Misura</string>
     <string name="measure_whitebalance_text">"Posiziona un foglio bianco o grigio davanti all'obbiettivo e premi il tasto"</string>
     <string name="pref_camera_hdr_type_title">Tipo di HDR</string>
     <string name="pref_camera_hdr_type_entry_normal">Normale</string>
     <string name="pref_camera_hdr_type_entry_live">Live</string>
-    <string name="pref_camera_ubi_focus_title">Ubi-focus</string>
-    <string name="simple_mode_button_text_ubi_focus">Chiudi modalità Ubi-focus</string>
-    <string name="ubi_focus_exit_button_text">Esci dalla modalità Ubi-focus</string>
-    <string name="pref_camera_auto_chroma_flash_title">Chroma-flash automatico</string>
-    <string name="pref_touch_down_capture_title">Ripresa Touch Down</string>
-    <string name="toast_cannot_preview_image_when_screen_locked">Impossibile vedere immagini o video quando lo schermo è bloccato.</string>
     <string name="accessibility_ev_control">Controllo di compensazione esposizione</string>
-    <string name="object_track_enable_toast">"Scorri sull'anteprima per attivare il tracciamento dell'oggetto."</string>
-    <string name="cannot_move_warning_message">Foto in esecuzione, non muovere il dispositivo</string>
-    <string name="ubifocus_capture_warning_message">"E' meglio quando la schermata di anteprima contiene sia oggetti vicini (meno di un metro dall'obbiettivo) che oggetti lontani"</string>
-    <string name="pref_camera_auto_capture_when_stable_title">Scatta automaticamente quando stabile</string>
+   <string name="toast_cannot_preview_image_when_screen_locked">"Non è possibile visualizzare l'immagine o il video quando lo schermo è bloccato"</string>
+    <string name="pref_priority_storage_title">Salva sulla scheda SD esterna</string>
 </resources>
