--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2421,7 +2421,7 @@ Seleziona il sistema operativo del tuo computer:"</string>
     <string name="msd_pc_system_install_finish_summary_vista">"Per Windows Vista e versioni più recenti di Windows,
 %1$s apparirà come memoria di massa USB quando connesso ad un computer."</string>
     <string name="msd_install_retry">Se il computer non è riuscito a rilevare il dispositivo, prova così:</string>
-    <string name="msd_install_retry_connect">Riconnett il cavo USB.</string>
+    <string name="msd_install_retry_connect">Riconnetti il cavo USB.</string>
     <string name="msd_install_retry_reinstall">Reinstalla il driver.</string>
     <string name="msd_install_retry_reinstall_mac">"Cerca Android File Transfer,
 ed esegui il software."</string>
