--- a/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
@@ -253,8 +253,8 @@ ed esci dall'inquadratura"</string>
     <string name="pref_camera_autoexposure_entry_centerweighted">Media ponderata al centro</string>
     <string name="pref_camera_autoexposure_entry_spotmetering">Misurazione a punto</string>
     <string name="pref_camera_audio_capture_title">Scatto vocale</string>
-	<string name="pref_audio_indicator_entry_off">Disattivo</string>
-    <string name="pref_audio_indicator_entry_on">Attivo</string>
+	<string name="pref_audio_indicator_entry_off">Audio Dis.</string>
+    <string name="pref_audio_indicator_entry_on">Audio Att.</string>
     <string name="pref_camera_video_duration_title">Durata Video</string>
     <string name="pref_camera_video_duration_entry_mms">30 secondi(MMS)</string>
     <string name="pref_camera_video_duration_entry_10">10 minuti</string>
