--- a/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
@@ -105,7 +105,7 @@
     <string name="yesterday">Ieri</string>
     <string name="imports">Importati</string>
     <string name="local_media_empty_hint">Nessun video locale</string>
-    <string name="edit">Modificati</string>
+    <string name="edit">Modif.</string>
     <string name="local_favorite_empty_hint">Nessun preferito</string>
     <string name="unfavorite">Unstar</string>
     <string name="play">Inzia</string>
