--- a/Italian/device/flo/MiuiVideo.apk/res/values-it/strings.xml
+++ b/Italian/device/flo/MiuiVideo.apk/res/values-it/strings.xml
@@ -177,7 +177,10 @@
     <string name="setting">Impostazioni</string>
     <string name="offline_setting">Video offline</string>
     <string name="use_cellular_network">Usa la rete cellulare</string>
-    <string name="use_cellular_network_summary">utilizza la rete cellulare per scaricare i video, questo comporterà costi molto elevati di traffico dati.</string>
+    <string name="use_cellular_network_summary">Utilizza la rete cellulare per scaricare i video, questo comporterà costi molto elevati di traffico dati.</string>
+    <string name="mipush_setting">Nofitiche contenuti</string>
+    <string name="receive_mipush">Ricevi le notifiche  contenuti</string>
+    <string name="receive_mipush_summary">Ricevi le notifiche sui contenuti online nuovi o aggiornati</string>   
     <string name="play_setting">Riproduci</string>
     <string name="auto_play">Autoplay quanto è pronto</string>  
     <string name="auto_play_summary">Riproduci il video quando il buffering o il download è finito</string>
